samples/_failures_safe/1761177717_e4f362_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b46bad5e.c: In function ‘main’:
./samples/SAFE/__tmp_b46bad5e.c:145:5: error: expected declaration or statement at end of input
  145 |     while (1) {
      |     ^~~~~
./samples/SAFE/__tmp_b46bad5e.c:145:5: error: expected declaration or statement at end of input
